--- a/index.html
+++ b/index.html
@@ -240,9 +240,10 @@
 
         .highlight {
             background: linear-gradient(135deg, #2563eb, #1d4ed8);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
             background-clip: text;
+            -webkit-background-clip: text;
+            color: transparent;
+            -webkit-text-fill-color: transparent;
             font-weight: 700;
         }
 
